[s390] Fix CDS: some bytecode rewriting doesn't depend on RewriteControl

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 10
    • Affects Version/s: 9, 10
    • Component/s: hotspot
    • None
    • b36
    • s390x

      --- a/src/hotspot/cpu/s390/templateTable_s390.cpp Thu Nov 23 09:47:19 2017 +0100
      +++ b/src/hotspot/cpu/s390/templateTable_s390.cpp Fri Nov 24 15:27:34 2017 +0100
      @@ -2884,12 +2884,12 @@
         // ztos
         BTB_BEGIN(is_Bool, bsize, "putfield_or_static:is_Bool");
         __ pop(ztos);
      - if (do_rewrite) {
      + if (!is_static) {
           pop_and_check_object(obj);
         }
         __ z_nilf(Z_tos, 0x1);
         __ z_stc(Z_tos, field);
      - if (!is_static) {
      + if (do_rewrite) {
           patch_bytecode(Bytecodes::_fast_zputfield, bc, Z_ARG5, true, byte_no);
         }
         __ z_bru(Done);

            Assignee:
            Volker Simonis
            Reporter:
            Volker Simonis
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: