8191863: [s390] Fix CDS: some bytecode rewriting doesn't depend on RewriteControl

Reviewed-by: mdoerr, goetz, jiangli